--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -2,8 +2,9 @@ name: Terraform CI/CD
 
 on:
   push:
-    branches: [main]
-  pull_request:
+    branches:
+      - main
+      - testing
 
 jobs:
   terraform:
