--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -13,6 +13,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      security-events: write 
 
     steps:
       - name: Checkout code
@@ -50,12 +51,12 @@ jobs:
           format: sarif
           github_token: ${{ secrets.GITHUB_TOKEN }}
           soft_fail: true
+        continue-on-error: true
 
       - name: Upload tfsec report to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: results.sarif
-
+          sarif_file: tfsec.sarif
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan -input=false -no-color
