--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -44,19 +44,20 @@ jobs:
         uses: terraform-linters/setup-tflint@v4
       - run: tflint --init && tflint
 
-      - name: Run tfsec
+      - name: Run tfsec (Action)
         uses: aquasecurity/tfsec-action@v1.0.3
         with:
           working_directory: .
           format: sarif
+          additional_args: --out tfsec.sarif
           github_token: ${{ secrets.GITHUB_TOKEN }}
           soft_fail: true
-        continue-on-error: true
 
-      - name: Upload tfsec report to GitHub Security tab
+      - name: Upload tfsec report
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: tfsec.sarif
+
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan -input=false -no-color
