--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -7,14 +7,60 @@ on:
       - testing
 
 jobs:
-  terraform:
+  # -------------------------------
+  # 🔐 SECURITY JOB: Linting + tfsec
+  # -------------------------------
+  security:
+    name: Security & Compliance Scan
     runs-on: ubuntu-latest
-    environment: production
+    permissions:
+      contents: read
+      security-events: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.10.0
+
+      - name: Terraform Fmt Check
+        run: terraform fmt -check
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Setup TFLint
+        uses: terraform-linters/setup-tflint@v4
+      - run: tflint --init && tflint
+
+      - name: Run tfsec scan
+        uses: aquasecurity/tfsec-action@v1.0.3
+        with:
+          working_directory: .
+          format: sarif
+          additional_args: --out tfsec.sarif
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          soft_fail: true
+
+      - name: Upload tfsec report
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: tfsec.sarif
+
+  # -------------------------------
+  # 🚀 DEPLOY JOB: Terraform Plan + Apply
+  # -------------------------------
+  deploy:
+    name: Terraform Deploy
+    runs-on: ubuntu-latest
+    needs: security     # 👈 ensures security job runs first
     permissions:
       id-token: write
       contents: read
-      security-events: write 
       issues: write
+    environment: production
 
     steps:
       - name: Checkout code
@@ -35,35 +81,10 @@ jobs:
       - name: Terraform Init
         run: terraform init -input=false
 
-      - name: Terraform Fmt Check
-        run: terraform fmt -check
-
-      - name: Terraform Validate
-        run: terraform validate
-
-      - name: Terraform Lint
-        uses: terraform-linters/setup-tflint@v4
-      - run: tflint --init && tflint
-
-      - name: Run tfsec (Action)
-        uses: aquasecurity/tfsec-action@v1.0.3
-        with:
-          working_directory: .
-          format: sarif
-          additional_args: --out tfsec.sarif
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          soft_fail: true
-
-      - name: Upload tfsec report
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: tfsec.sarif
-
-
       - name: Terraform Plan
         run: terraform plan -out=tfplan -input=false -no-color
 
-      # Manual approval for PROD (main branch)
+      # 🟡 Manual approval before prod apply
       - name: Wait for manual approval before Apply
         if: github.ref == 'refs/heads/main'
         uses: trstringer/manual-approval@v1
@@ -74,13 +95,12 @@ jobs:
           issue-title: "Production Terraform Apply Approval"
           issue-body: "Please approve this Terraform apply for the main branch."
 
-
-      # Terraform Apply for all branches
-      - name: Terraform Apply
-        if: github.ref != 'refs/heads/main'
+      # ✅ Auto apply for testing branch
+      - name: Terraform Apply (Auto)
+        if: github.ref == 'refs/heads/testing'
         run: terraform apply -auto-approve tfplan
 
-      # Apply for main only after approval
+      # ✅ Apply after approval for prod
       - name: Terraform Apply (Production)
         if: github.ref == 'refs/heads/main'
-        run: terraform apply -input=false -auto-approve tfplan
+        run: terraform apply -auto-approve tfplan
